[package]
name = "raptor_cdn"
version = "0.1.0"
authors = ["richk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raptor_cdn_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
num-format = "0.4"
raptorq = { version = "1.6", features = ["serde_support"] }
rand = "0.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"